--- a/HY/public/css/daily_list.css
+++ b/HY/public/css/daily_list.css
@@ -45,40 +45,38 @@ td {
   margin-top: 2%;
 }
 .content {
+  width: 500px;
   height: 600px;
   /* margin-left: 23%; */
+  margin-top: 20px;
   margin-left: 0;
 }
 .content table{
   margin-right: 0;
 }
-.total-content {
-  width: 508px;
-  height: 390px;
-  border: 2px solid #c2c2c2;
+
+/* 상세보기 */
+.clear{
+  clear: both;
 }
 
-.element {
-  border: 1px solid #c2c2c2c2;
-  margin: 36%;
-  width: 168%;
-  height: 9%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.show {
+  width: 500px;
+  height: 350px;
+  border: 3px solid #C2C2C2;
+  padding: 20px;
+  margin-top: 20px;
+  overflow: auto;
 }
-.input-content {
-  margin-left: 16%;
+
+.show p{
+  float: left;
+  border: 1px solid #C2C2C2;
+  padding: 5px 10px;
+  margin-right: 30px;
 }
-.input-element {
-  margin: 39%;
-  width: 168%;
-  height: 9%;
-  display: flex;
-  align-items: center;
-  text-align: left;
-}
-.total-content {
-  display: flex;
-  flex-direction: row;
+
+.show span {
+  float: left;
+  margin-top: 20px;
 }
