--- a/HY/public/css/findPW.css
+++ b/HY/public/css/findPW.css
@@ -1,5 +1,3 @@
-
-
 /* 이미지 */
 .one {
   width: 550px;
@@ -32,7 +30,6 @@
   margin-top: 20px;
   margin-left: auto;
   margin-right: auto;
-
 }
 
 .pNumber {
@@ -63,6 +60,7 @@
   color: white;
   border: none;
   font-family: Pretendard_Bold;
+  cursor: pointer;
 }
 
 .registerBTN, .complete {
@@ -74,6 +72,7 @@
   border: none;
   font-family: Pretendard_Bold;
   font-size: 15px;
+  cursor: pointer;
 }
 
 #newPW {
