--- a/HY/public/css/login.css
+++ b/HY/public/css/login.css
@@ -64,6 +64,7 @@ p {
 .findPW p{
   font-size: 12px;
   color: #8D8D8D;
+  cursor: pointer;
   float: right;
 }
 
@@ -88,6 +89,7 @@ p {
   font-family: Pretendard_ExtraBold;
   /* text-align: center; */
   float: right;
+  cursor: pointer;
 }
 
 .loginBTN {
@@ -99,6 +101,7 @@ p {
   border: none;
   font-family: Pretendard_Bold;
   font-size: 15px;
+  cursor: pointer;
 }
 
 #submit:hover, .loginBTN:hover {
