--- a/FrontEnd/public/css/daily_list.css
+++ b/FrontEnd/public/css/daily_list.css
@@ -37,6 +37,7 @@ td {
 }
 .date {
   width: 381px;
+  cursor: pointer;
 }
 .total {
   display: flex;
@@ -46,13 +47,15 @@ td {
 }
 .content {
   width: 500px;
-  height: 600px;
+  height: 400px;
   /* margin-left: 23%; */
   margin-top: 20px;
   margin-left: 0;
+  overflow: auto;
 }
 .content table{
   margin-right: 0;
+  height: 100px;
 }
 
 /* 상세보기 */
@@ -79,4 +82,15 @@ td {
 .show span {
   float: left;
   margin-top: 20px;
+}
+
+/* 삭제, 수정 */
+.tool {
+  width: 80px;
+  /* border: 1px solid red; */
+  float: right;
+}
+.tool img {
+  width: 20px;
+  margin-left: 10px;
 }
