--- a/FrontEnd/public/css/journal_checkList.css
+++ b/FrontEnd/public/css/journal_checkList.css
@@ -1,4 +1,7 @@
-/*x테이블 설정*/
+.hidden {
+  display: none;
+}
+
 table,
 th,
 td {
@@ -25,92 +28,67 @@ td {
   height: 40px;
 }
 #name {
-  width: 400px;
+  width: 350px;
 }
 .name {
   padding-left: 3%;
   text-align: left;
-  width: 450px;
-  height: 55px;
+  width: 350px;
+  font-size: 17px;
 }
-#method {
-  width: 380px;
+#top-title {
+  width: 530px;
 }
-.method {
-  text-align: center;
-}
-
+#date,
 .date {
-  width: 102px;
+  width: 200px;
+}
+.date {
+  padding-left: 4.5%;
 }
 .check {
   width: 150px;
 }
-.check-box {
-  display: flex;
-  justify-content: center;
-}
 .check input {
   zoom: 1.5;
 }
-.percent {
-  font-size: 18px;
-  margin-bottom: 0.5%;
+.table-situation {
+  text-align: left;
+  width: 530px;
 }
 .content {
   height: 800px;
-  margin-left: 26%;
-  margin-top: 3%;
-  width: 70%;
-}
-
-.date-submit {
-  display: flex;
-  justify-content: center;
-  margin-left: 55%;
-  flex-direction: row;
+  margin-left: 14%;
   margin-top: 2%;
 }
-.date {
-  margin-right: 5%;
+.graph ul {
+  margin: 0 50px 0 50px;
+  padding: 1px 0 0 0;
+  border-top: 0;
+  border-right: 0;
+  font-size: 11px;
+  list-style: none;
 }
-.bar {
-  width: 40%;
-}
-.one-hundred {
-  width: 100%;
-  height: 25px;
-  background-color: #dddddd;
-  border-radius: 20px;
-}
-.progress {
-  height: 25px;
-  background-color: #0f4c81;
-  border-radius: 20px;
-}
-.time-bar {
-  display: flex;
-  flex-direction: row;
-  width: 40%;
-  margin-bottom: 1%;
+.graph li {
+  position: relative;
+  margin: 10px 0;
+  vertical-align: top;
+  white-space: nowrap;
 }
 
-.number {
-  color: #000000;
-  font-size: 18px;
+.graph .g_bar {
+  display: inline-block;
+  position: relative;
+  height: 20px;
+  border: 1px solid #ccc;
+  border-left: 0;
+  background: #e9e9e9;
 }
-.submit input {
-  margin-left: 35%;
-  width: 4vw;
-  height: 5vh;
-  border: 1px solid rgba(15, 76, 129, 0.47);
-  border-radius: 26px;
-  cursor: pointer;
-}
-#date-input {
-  height: 4.5vh;
-  border-radius: 26px;
-  border: 1px solid rgba(15, 76, 129, 0.47);
-  width: 8vw;
-  text-align: center;
+.graph .g_bar span {
+  position: absolute;
+  top: 0;
+  right: -50px;
+  width: 40px;
+  color: #767676;
+  line-height: 20px;
 }
