--- a/FrontEnd/public/css/mypage.css
+++ b/FrontEnd/public/css/mypage.css
@@ -8,7 +8,7 @@
   width: 1200px;
   height: 500px;
   /* background-color: rgb(255, 227, 183); */
-  margin-top: 30px;
+  margin-top: 80px;
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -31,6 +31,7 @@
   height: 400px;
   /* border: 1px solid blue; */
   margin-left: 100px;
+  margin-top: 35px;
 }
 
 
@@ -56,15 +57,15 @@
   height: 30px;
 }
 
-.box1 button, .box2 button {
+.box2 button {
   font-family: Pretendard_Light;
-  width: 4vw;
+  width: 200px;
   height: 5vh;
   background: #ffffff;
   cursor: pointer;
   border: 1px solid rgba(15, 76, 129, 0.47);
   border-radius: 26px;
-  font-size: 15px;
-  margin-top: 10px;
-  margin-left: 195px;
+  font-size: 18px;
+  margin-top: 20px;
+  margin-left: 85px;
 }
