--- a/FrontEnd/public/css/journal_main.css
+++ b/FrontEnd/public/css/journal_main.css
@@ -107,12 +107,12 @@ body {
   cursor: pointer;
 }
 .cal-table td.today {
-  background: #ffd255;
+  background: #36A5F8;
   border-radius: 50%;
   color: #fff;
 }
 .cal-table td.day-active {
-  background: #ff8585;
+  background: #BDE3FF;
   border-radius: 50%;
   color: #fff;
 }
@@ -125,4 +125,56 @@ body {
   width: 100%;
   height: 4px;
   background: #ffc107;
+}
+
+/* 날씨 */
+.clear {
+  clear: both;
+}
+.container {
+  float: left;
+}
+
+.Box {
+  width: 500px;
+  height: 500px;
+  /* background-color: #ff8585; */
+  margin-left: 700px;
+  position: absolute;
+  /* margin-top: 50px; */
+}
+
+.weather{
+  width: 450px;
+  height: 430px;
+  /* background-color: #ffd255; */
+  /* border: 1px solid black; */
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 40px;
+}
+#weather{
+  font-family: Pretendard_Regular;
+}
+
+#weather img{
+  width: 70px;
+} 
+
+#weather p {
+  width:  90px;
+  text-align: center;
+  float: left;
+  border: 1px solid #C2C2C2;
+  padding: 5px 10px;
+  margin-right: 30px;
+  float: left;
+  margin-bottom: 0px;
+}
+
+#weather span {
+  display: block;
+  margin-top: 22px;
+  float: left;
 }
